feat(web-ui): add content tag management to tester dashboard

--- a/test/web-ui/index.html
+++ b/test/web-ui/index.html
@@ -151,6 +151,55 @@
         background: #fee2e2;
         color: #991b1b;
       }
+
+      /* Tag Manager Styles */
+      .tag-manager {
+        margin-top: 10px;
+        padding: 10px;
+        background: #f1f5f9;
+        border-radius: 4px;
+        border: 1px solid #cbd5e1;
+      }
+      .tag-chips {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+        margin-bottom: 10px;
+      }
+      .tag-chip {
+        display: inline-flex;
+        align-items: center;
+        background: #fff;
+        border: 1px solid #e2e8f0;
+        border-radius: 12px;
+        padding: 2px 8px;
+        font-size: 0.85em;
+        color: #334155;
+      }
+      .tag-chip button {
+        background: none;
+        color: #ef4444;
+        border: none;
+        padding: 0;
+        margin-left: 6px;
+        font-size: 1.1em;
+        line-height: 1;
+        width: auto;
+      }
+      .tag-chip button:hover {
+        background: none;
+        color: #b91c1c;
+      }
+      .add-tag-row {
+        display: flex;
+        gap: 8px;
+      }
+      .add-tag-row select {
+        flex: 1;
+        padding: 4px;
+        border-radius: 4px;
+        border: 1px solid #cbd5e1;
+      }
     </style>
   </head>
   <body>
