added notification sending mechanism for sign up

--- a/test/web-ui/index.html
+++ b/test/web-ui/index.html
@@ -220,6 +220,10 @@
             value="https://vekku-bun.kuchukboromd.workers.dev/api"
           />
           <div id="connectionStatus" class="status-badge">Checking...</div>
+          <hr style="border: 0; border-top: 1px solid var(--border); margin: 15px 0;">
+          <h4 style="margin: 0 0 10px 0;">Tools</h4>
+          <input type="email" id="testNotifEmail" placeholder="Test Email (optional)" style="margin-bottom: 5px;" />
+          <button onclick="testNotification()" class="secondary">Test Notification</button>
         </div>
 
         <div class="card" id="authSection">
